--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: auto;
+  max-width: 60%;
+  min-width: 340px;
+}
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -9,9 +14,20 @@ cite {
   margin-top: 10px;
 }
 
+#external-links {
+  vertical-align: top;
+  position: absolute;
+  top: 4px;
+  width: 20%;
+  max-width: 200px;
+  left: 0px;
+  min-width: 50px;
+}
+
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+  padding-right: 50px;
 }
 
 /* you're welcome to edit the
@@ -29,4 +45,22 @@ figure {
 figcaption {
   font-style: italic;
   text-align: right;
+}
+
+
+@media screen and (max-width: 870px) {
+  .wildflowers {
+    font-size: 130%;
+  }
+}
+
+@media screen and (max-width: 624px) {
+  .flickrlucas {
+    font-size: 20%;
+  }
+}
+@media screen and (max-width: 624px) {
+  .flickrlucas {
+    font-size: ;
+  }
 }
